--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,17 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
 
+::selection {
+  background: #f75375;
+}
 
+code {
+  font-size: 20px;
+  font-weight: 700;
+}
 
 
 
